# signaldeck-ui

./: .gitignore  LICENSE  README.md  pyproject.toml
signaldeck_ui/: __init__.py  blueprint.py
signaldeck_ui/static/core/: app.js  base.css
signaldeck_ui/templates/core/: cronjob.html  group.html  index.html  layout.html
signaldeck_ui/templates/ui/: _utils.html  index.html  layout.html
